--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,9 @@ header >div> h1{
     margin: 0%;
 }
 header >div> h1{
+    font-size: 25px;
     margin-left: 20px;
+    align-items: center;
 }
 }
 
@@ -71,18 +73,21 @@ header >div> h1{
 @media only screen and (max-width: 600px){
 
         .intro > div >div h1{
-            font-size: 25px;
+            font-size: 15px;
         }
         .intro > div >div p{
-            margin: 20px 0px;
+            font-size: 10px;
+            margin: 10px 0px;
         }
         .intro > div >div button{
-            height: 35px;
+            height: 25px;
             
             background-color: #1D6FB8;
             color: white; 
             border: none; 
         }
+
+
         
 }
 /* about section */
@@ -138,7 +143,7 @@ header >div> h1{
         }
     
         .img-wrapper > img {
-            width: 300px;
+            width: 200px;
             border-radius: 10px;
         }
 
@@ -158,6 +163,7 @@ header >div> h1{
 .education{
     background-color: aliceblue;
     padding: 30px 0px 10px 0px;
+    
 }
 
 .education > div{
@@ -182,9 +188,13 @@ header >div> h1{
 
 
 .edu-card{
-    padding: 50px 0px;
-   
+    padding: 50px 50px;
 }
+
+.education > div > div h4{
+    padding-top : 10px;
+}
+
 @media screen and (max-width: 600px) {
 .education > div > div {
     display: block;
@@ -409,8 +419,8 @@ header >div> h1{
         position: absolute;
         top: 22px;
         width: 0;
-        z-index: 2;
-        right: 500px;
+        z-index: 1;
+        right: 370px;
         border: medium solid rgb(219, 22, 22);
         border-width: 10px 0 10px 10px;
         border-color: transparent transparent transparent rgb(183, 18, 18);
@@ -425,7 +435,7 @@ header >div> h1{
         width: 0;
         z-index: 1;
         left: 50px;
-        border: medium solid white;
+        border: medium solid rgb(183, 18, 18);
         border-width: 10px 10px 10px 0;
         border-color: transparent rgb(186, 12, 12) transparent transparent;
       }
