--- a/styles.css
+++ b/styles.css
@@ -268,12 +268,25 @@ header >div> h1{
 }
 
 .skills > div > div {
-    width: 100%;
-    padding:0px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 2;
+    
+}
+.skills > div > div >div{
+    width:50%;
+    padding:20px 20px ; 
 }
 
 .skills > div > div p{
-    margin: 20px 0px;
+    margin: 10px 0px;
+}
+
+@media screen and (max-width: 600px){
+    .skills > div > div > div{
+        width: 100%;
+        
+    }
 }
 
 /* experience section */
