--- a/styles.css
+++ b/styles.css
@@ -284,8 +284,12 @@ header >div> h1{
 
 @media screen and (max-width: 600px){
     .skills > div > div > div{
+        
         width: 100%;
         
+    }
+    .skill >div >div {
+        display: block;
     }
 }
 
